<resources>
    <string name="app_name">User Generator App</string>
    <string name="profile_picture">Profile Image</string>
    <string name="user_details_label_gender">Gender:</string>
    <string name="user_details_email_address_lable">Email Address</string>
    <string name="phone_number">Phone number:</string>
    <string name="user_details_address_label">Address</string>
    <string name="result_query">Search Result: %s</string>
    <string name="error_title">Oops!</string>
    <string name="error_positive_text">OK</string>
</resources>